# CrossForge

./: .SandboxMain.cpp.~732b  .gitignore  .gitmodules  .stignore  CMakeLists.txt  CMakeSettings.json  CrossForge.kdev4  ExportLibrary.cpp  ExportLibrary.hpp  LICENSE  LICENSE.md  Main.cpp  README.md  SandboxMain.cpp  TempRegMain.cpp  vcpkg.json  vcpkgBAK.json
.kdev4/: CrossForge.kdev4
Assets/: TexturedCube.fbx  UnitCylinder.glb  UnitSphere.glb  cube.fbx  cubeSep.mtl  stresstest.mtl  submeshTest.mtl
Assets/ExampleScenes/: Eric_Anim.fbx  MuscleManSittingWalkingClean.glb  SimpleSkydome.fbx  SimpleSkydome.glb  SimpleSkydome.gltf  TexturedGround.gltf  TexturedUnitCube.gltf
Assets/MuscleAnalysisPL/: 3DGaitModel2354-scaled_MuscleAnalysis_ActiveFiberForce.sto  3DGaitModel2354-scaled_MuscleAnalysis_ActiveFiberForceAlongTendon.sto  3DGaitModel2354-scaled_MuscleAnalysis_FiberActivePower.sto  3DGaitModel2354-scaled_MuscleAnalysis_FiberForce.sto  3DGaitModel2354-scaled_MuscleAnalysis_FiberLength.sto  3DGaitModel2354-scaled_MuscleAnalysis_FiberPassivePower.sto  3DGaitModel2354-scaled_MuscleAnalysis_FiberVelocity.sto  3DGaitModel2354-scaled_MuscleAnalysis_Length.sto  3DGaitModel2354-scaled_MuscleAnalysis_MuscleActuatorPower.sto  3DGaitModel2354-scaled_MuscleAnalysis_NormFiberVelocity.sto  3DGaitModel2354-scaled_MuscleAnalysis_NormalizedFiberLength.sto  3DGaitModel2354-scaled_MuscleAnalysis_PassiveFiberForce.sto  3DGaitModel2354-scaled_MuscleAnalysis_PassiveFiberForceAlongTendon.sto  3DGaitModel2354-scaled_MuscleAnalysis_PennationAngle.sto  3DGaitModel2354-scaled_MuscleAnalysis_PennationAngularVelocity.sto  3DGaitModel2354-scaled_MuscleAnalysis_TendonForce.sto  3DGaitModel2354-scaled_MuscleAnalysis_TendonLength.sto  3DGaitModel2354-scaled_MuscleAnalysis_TendonPower.sto  (+18 more)
CForge/: CrossForgeBuild.cmake
Core/: CrossForgeException.cpp  CrossForgeException.h  File.cpp  File.h  SCrossForgeDevice.cpp  SCrossForgeDevice.h  SLogger.cpp  SLogger.h
Documentation/: CrossForgeDoc.html  CrossForgeIndex.h  CrossForgeIndex.md  DoxyConfig  Doxygen.cmd  DoxygenGroups.h  Doxywarnings.txt  Examples.h  Examples.md  PeronalNotesTomU.h  ProgrammingGuide.h  ProgrammingGuide.md  Roadmap.h  Roadmap.md
Examples/: EDT.hpp  ExampleBirdMenu.hpp  ExampleBirdSkeletalTestAnimation.hpp  ExampleBirdVR.hpp  ExampleCollisionTest.hpp  ExampleFlappyBird.hpp  ExampleFlappyBirdCollision.hpp  ExampleLighting.hpp  ExampleMapBuilderGrid.hpp  ExampleMinimumGraphicsSetup.hpp  ExampleMorphTargetAnimation.hpp  ExampleMultiViewport.hpp  ExampleRealtimeMotion.hpp  ExampleRealtimeMotion2.hpp  ExampleSceneBase.hpp  ExampleSceneGraph.hpp  ExampleShapesAndMaterials.hpp  ExampleSkeletalAnimation.hpp  ExampleSkybox.hpp  ExampleSockets.hpp  ExampleTextRendering.hpp  ExampleTransformation.hpp  ExampleTransformationSG.hpp  ExampleTransformation_SG.hpp  Examples.hpp  MinimumGraphicalSetup.hpp  Readme.md  SceneUtilities.hpp  TerrainSetup.hpp  eExampleMinimumGraphicsSetup.hpp  eExampleSceneGraph.hpp  eExampleSkeletalAnimation.hpp  eExampleSockets.hpp  exampleMinimumGraphicsSetup.hpp  exampleMorphTargetAnimation.hpp  exampleMultiViewport.hpp  exampleSceneBase.hpp  exampleSceneGraph.hpp  exampleShapeDeformer.hpp  exampleSkeletalAnimation.hpp  (+5 more)
Prototypes/: AutoRig.cpp  AutoRig.hpp  DevicesTestFunctions.hpp  I2C.cpp  I2C.h  ImGuiUtility.cpp  LODHandler.cpp  LODHandler.h  MPU6050.cpp  MPU6050.h  MeshDecimate.cpp  MeshDecimate.h  PhotoFinish.cpp  PhotoFinish.h  PrototypeDefines.h  RotaryEncoder.cpp  SGPIO.cpp  SGPIO.h  SLOD.cpp  SLOD.h  SkeletonConvertion.cpp  SkeletonConvertion.hpp  StripPhoto.cpp  StripPhoto.h  StripPhotoCamera.cpp  StripPhotoCamera.h  TImage2D.hpp  UBOInstancedData.cpp  UBOInstancedData.h  Utilities.hpp
Terrain/: CMakeLists.txt  HeightMap.cpp  HeightMap.h  MapActor.cpp  MapActor.h  TerrainSetup.hpp  Tile.cpp  Tile.h  TileActor.cpp  TileActor.h  TileNode.cpp  TileNode.h
Terrain/Assets/: qualitySelection.txt
Terrain/Assets/richard/: leaves3_color.png~  leaves_color.png~
Terrain/GUI/: Callback.h  Font.cpp  Font.h  GUI.cpp  GUI.h  GUIDefaults.h  Widget.cpp  Widget.h  WidgetBackground.cpp  WidgetBackground.h
Terrain/GUI/Widgets/: Form.cpp  Form.h  InputCheckbox.cpp  InputCheckbox.h  InputDropDown.cpp  InputDropDown.h  InputNumber.cpp  InputNumber.h  InputSlider.cpp  InputSlider.h  InputText.cpp  InputText.h  Label.cpp  Label.h  Window.cpp  Window.h
Terrain/Shader/: BackgroundColored.frag  BackgroundColored.vert  DebugQuad.frag  Erosion.comp  Grass.frag  GrassShader.frag  HeightMap.comp  HeightMapShader.comp  InstanceFoliageShader.frag  InstanceGrassShader (2).frag  InstanceGrassShader.frag  InstanceGrassShader.vert  InstancePineShader.vert  InstanceRockShader.frag  InstanceShader.frag  InstanceShader.vert  Map.frag  Map.vert  MapShader.frag  MapShader.vert  MapShadow.vert  Rock.frag  Rock.vert  RockShader.frag  text.frag
Terrain/src/: ArrayTexture.cpp  ArrayTexture.h  DecoSetup.hpp  PPScreenQuad.cpp  PPScreenQuad.h  TerrainSetup.hpp
Terrain/src/Decoration/: CellularNoise3D.hpp  DecoSetup.cpp  DecoSetup.hpp  DekoMesh.hpp  DekoRenderGroupUtility.cpp  DekoRenderGroupUtility.h  GrassGenerator.hpp  InstanceActor.cpp  InstanceActor.h  InstanceSGN.cpp  InstanceSGN.h  InstanceVertexUtility.cpp  InstanceVertexUtility.h  ObjExporter.hpp  RockGenerator.cpp  RockGenerator.hpp  RockMesh.hpp  TreeGenerator.cpp  TreeGenerator.hpp  TreeMesh.hpp
Terrain/src/Map/: ClipMap.cpp  ClipMap.h  HeightMap.cpp  HeightMap.h  TerrainMap.cpp  TerrainMap.h  TileActor.h  TileNode.cpp  TileNode.h  UBOInstancedData.cpp  UBOInstancedData.h
Terrain/src/Water/: OceanObject.hpp  OceanSimulation.hpp  River.hpp  Settings.hpp  WaterManager.hpp  spline.h
Terrain/src/Water/Shader/: ButterFly.comp  ButterFlyTexture.comp  CalcNormals.comp  InversionShader.comp  Ocean.frag  Ocean.vert  Pool.frag  Pool.vert  PreCompShader.comp  ReflectionBlurHorizontal.frag  ReflectionBlurVertical.frag  RenderLoopShader.comp  River.frag  River.vert  WaterDebugQuad.frag  WaterPostProcessing.frag  WaterPostProcessing.vert
crossforge/: CrossForgeBuild.cmake
docs/: main.adoc
(+804 files in other folders)
